# VoxelRenderer

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
assets/shaders/: BasicFrag.glsl  BasicVert.glsl
scripts/: bootstrap.ps1
src/: main.cpp
src/Core/: Application.cpp  Application.h  Clock.cpp  Clock.h  EngineConfig.cpp  EngineConfig.h  Services.h  main.cpp
src/GL/: IndexBuffer.hpp  ShaderProgram.cpp  ShaderProgram.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h
src/Graphics/: Camera.h  Camera.hpp  ChunkMesh.cpp  ChunkMesh.h  ChunkMesher.cpp  ChunkMesher.h  CubeRenderer.cpp  CubeRenderer.h  GLRenderer.cpp  GLRenderer.h  IRenderer.h
src/Platform/: GLFWWindow.cpp  GLFWWindow.h  IWindow.h  Input.cpp  Input.h
src/Util/: ThreadPool.cpp  ThreadPool.h  util.hpp
src/World/: Block.hpp  Chunk.cpp  Chunk.h  ChunkGenerator.cpp  ChunkGenerator.h  Universe.cpp  Universe.h
src/World/Block/: Block.h
